Modifying Bill Mail